fix: store display issue on firefox
for some reason, when using the row-template-columns
rule with the value of min-content, the store would
not display in firefox. When removing this, it ended
up fixing my issue.

--- a/styles.css
+++ b/styles.css
@@ -257,7 +257,6 @@ p {
 .store-element {
     position: relative;
     display: grid;
-    grid-template-rows: min-content;
     gap: .5rem;
     border-radius: 1rem;
 }
